did some changes in ur

--- a/public/index.html
+++ b/public/index.html
@@ -31,12 +31,12 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Sahil Chitkara</h1>
-						<p>Node.Js Ninja | Node.Js Enthusiast | Javascript Developer | Fun loving guy | A Lover...</p>
+						<p>JS Aficionado  | Node.Js Enthusiast | Developer | Fun Lover | Explorer | Beer Evangelist | Gaming Enthusiast | Thinker</p>
 						<nav>
 							<ul>
 								<li><a href="https://twitter.com/sahilchitkara" class="icon fa-twitter-square"><span class="label">Twitter</span></a></li>
 								<li><a href="https://www.facebook.com/Mr.Chitkara" class="icon fa-facebook-square"><span class="label">Facebook</span></a></li>
-								<li><a href="http://instagram.com/sahilchitkara" class="icon fa-instagram"><span class="label">Dribbble</span></a></li>
+								<li><a href="http://instagram.com/sahil.chitkara" class="icon fa-instagram"><span class="label">Dribbble</span></a></li>
 								<li><a href="https://github.com/sahilchitkara" class="icon fa-github-square"><span class="label">Github</span></a></li>
 								<li><a href="https://www.linkedin.com/pub/sahil-chitkara/30/977/479" class="icon fa-linkedin-square"><span class="label">Email</span></a></li>
 							</ul>
